added box container along with styling to center the box

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+<div id="box-container">
+    <div id="box-title">Javascript Fundamentals Quiz</div>
+
+</div>
+
 
 <script src="codequest.js"></script>    
 </body>
