--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <div id="box-container">
     <div id="box-title">Javascript Fundamentals Quiz</div>
+        <div id="question">
+
+        </div>
 
 </div>
 
