--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
 <div id="box-container">
     <div id="box-title">Javascript Fundamentals Quiz</div>
-        <div id="question">
+        <div id="question"></div>
+        <div id="options"></div>
+        <button id="next-btn">Next Question</button>
+    </div>
 
-        </div>
 
 </div>
 
+<div id="result"></div>
 
 <script src="codequest.js"></script>    
 </body>
